--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:title" content="Personal Portfolio">
+    <meta property="og:title" content="title">
     <meta property="og:description" content="My Personal Portfolio">
     <meta property="og:url" content="{{ url }}">
 
@@ -20,21 +19,11 @@
 </head>
 
 <body>
-    <header class="nav-bar">
-        <div class="nav-content">
-            <a href="/">
-                <div class="nav-logo">
-                    <img src="./static/img/logo.svg" />
-                </div>
-            </a>
-        </div>
-    </header>
-
-    <div class="profile">
-        <div id="profile-picture" class="profile-picture">
-            <img src="./static/img/logo.jpg">
-        </div>
-        <h1>{{ title }}</h1>
-    </div>
+    {% extends "base.html" %}
+    
+    {% block content %}
+    <h1>Welcome to My Portfolio!</h1>
+    <p>my name is Ishar Ghura</p>
+    {% endblock %}
 </body>
 </html>
