--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,8 +22,8 @@
     {% extends "base.html" %}
     
     {% block content %}
-    <h1>Welcome to My Portfolio!</h1>
-    <p>my name is Ishar Ghura</p>
+    <h1>Welcome to my Portfolio!</h1>
+    <p>my name is Ishar Ghura!</p>
     {% endblock %}
 </body>
 </html>
