--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
     {% extends "base.html" %}
     
     {% block content %}
-    <h1>Welcome to my Portfolio!</h1>
+    <h1>Welcome to my Portfolio website!</h1>
     <p>my name is Ishar Ghura!</p>
     {% endblock %}
 </body>
